--- a/destinasi.html
+++ b/destinasi.html
@@ -26,14 +26,14 @@
         <nav class="navbar navbar-expand-lg" id="navbar">
           
             <div class="container">
-              <a class="navbar-brand" href="TUGAS KELOMPOK.html" id="Logo"><span>Arch</span>trip</a>
+              <a class="navbar-brand" href="index.html" id="Logo"><span>Arch</span>trip</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span><i class="fa-solid fa-bars"> </i></span>
               </button>
               <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="TUGAS KELOMPOK.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="SIGNUP.html">sign up</a>
