--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
-        <link rel="stylesheet" href="FONT.css">
+        <link rel="stylesheet" href="main.css">
 
         <!-- bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -36,12 +36,12 @@
                     <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="SIGNUP.html">sign up</a>
+                    <a class="nav-link" href="signup.html">sign up</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="DESTINASI.html">Destinasi</a>
+                    <a class="nav-link" href="destinasi.html">Destinasi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="TENTANG KAMI.html">Tentang Kami</a>
+                    <a class="nav-link" href="tentang kami.html">Tentang Kami</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -58,7 +58,7 @@
             <h5>Welcome To Architectural Traveling</h5>
             <h1>Where to go? <span class="changecontent"></span></h1>
             <p> Italia, Jepang, Prancis, Turki, dan lebih banyak lagi! </p>
-            <a href="DESTINASI.html"> Jelajahi Dunia Sekarang!!!</a>   
+            <a href="destinasi.html"> Jelajahi Dunia Sekarang!!!</a>   
           </div>
           </div>
            <!-- Home Section End -->
