--- a/singup.html
+++ b/singup.html
@@ -36,12 +36,12 @@
                     <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="SIGNUP.html">sign up</a>
+                    <a class="nav-link" href="signup.html">sign up</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="DESTINASI.html">Destinasi</a>
+                    <a class="nav-link" href="destinasi.html">Destinasi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="TENTANG KAMI.html">Tentang Kami</a>
+                    <a class="nav-link" href="tentang kami.html">Tentang Kami</a>
                   </li>
                 </ul>
                 <form class="d-flex">
