--- a/singup.html
+++ b/singup.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg" id="navbar">
           
             <div class="container">
-              <a class="navbar-brand" href="TUGAS KELOMPOK.html" id="Logo"><span>Arch</span>trip</a>
+              <a class="navbar-brand" href="index.html" id="Logo"><span>Arch</span>trip</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span><i class="fa-solid fa-bars"> </i></span>
               </button>
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="destinasi.html">Destinasi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tentang_kami.html">Tentang Kami</a>
+                    <a class="nav-link" href="tentang kami.html">Tentang Kami</a>
                   </li>
                 </ul>
                 <form class="d-flex">
