--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="singup.html">sign up</a>
+                    <a class="nav-link" href="signup.html">sign up</a>
                   <li class="nav-item">
                     <a class="nav-link" href="destinasi.html">Destinasi</a>
                   </li>
