--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg" id="navbar">
           
             <div class="container">
-              <a class="navbar-brand" id="logo"><span>arch</span>trip</a>
+              <a class="navbar-brand" href="index.html" id="logo"><span>arch</span>trip</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span><i class="fa-solid fa-bars"> </i></span>
               </button>
